--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@ placeholder="Telefone">
  </tbody>
  </table>
  <script
-src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></s
-cript>
+src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2">
+ </script>
  <script src="config.js"></script>
  <script src="main.js"></script>
 </body>
 </html>
+
 
