--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@ placeholder="Telefone">
  <!-- Linhas serão carregadas pelo JS -->
  </tbody>
  </table>
- <script
-src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2">
- </script>
+ <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
  <script src="config.js"></script>
  <script src="main.js"></script>
 </body>
 </html>
+
 
 
